# proto-daemon

./: .gitignore  README.md  auth_client.py  cf-worker.js  client.py  ipv6_encoder.py  main.cpp  pw_hash.py  pyproject.toml  read_config.h  requirements.txt  server.py  serving_twisted.py  todo.md
.github/workflows/: main.yml
.wrangler/tmp/dev-FsxJR4/: cf-worker.js
Client/: client.py
Implant/: Makefile  compress_conf.py  func_randomizer.py  go.mod  go.sum  preprocessor.py
Implant/anti/: debug.go
Implant/base_config/anti/: debug.go
Implant/base_config/daemon/: daemon-implant.go
Implant/base_config/shared/: Compression.go  Utility.go  commHttp.go  commands.go  config.json  fallbackComp.go
Implant/daemon/: daemon-implant.go
Implant/http/: fallback.go
Implant/rogue/: RogueOne.go
Implant/shared/: Compression.go  Lua.go  Utility.go  commDns.go  commHttp.go  fallbackComms.go  fallbackComp.go  fallbackLua.go
Server/: cf-worker.js  func_randomizer.py  ipv6_encoder.py  opaque_predicates.py  s_conf.json  server.py
Server/blueprints/: example.py
implant/: Makefile  config.json  daemon-implant.go  go.mod  go.sum
implant/dns/: config.json  daemon-implant-dns.go
implant/http/: daemon-implant-http.go
implant/shared/: Utility.go  config.json
