[project]
name = "proto-daemon"
version = "0.1.0"
description = "A prototype C2 using DNS as a comms method"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asttokens==2.4.1",
    "attrs==24.2.0",
    "automat==24.8.1",
    "backcall==0.2.0",
    "bcrypt==4.2.0",
    "beautifulsoup4==4.12.3",
    "bleach==6.2.0",
    "blinker==1.8.2",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "constantly==23.10.4",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "dnslib==0.9.25",
    "docopt==0.6.2",
    "executing==2.1.0",
    "fastjsonschema==2.20.0",
    "flask==3.0.3",
    "hyperlink==21.0.0",
    "idna==3.10",
    "incremental==24.7.2",
    "ipython==8.12.3",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.4",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "jupyterlab-pygments==0.3.0",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "mistune==3.0.2",
    "nbclient==0.10.0",
    "nbconvert==7.16.4",
    "nbformat==5.10.4",
    "packaging==24.2",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "pickleshare==0.7.5",
    "platformdirs==4.3.6",
    "prompt-toolkit==3.0.48",
    "pure-eval==0.2.3",
    "pygments==2.18.0",
    "python-dateutil==2.9.0.post0",
    "pywin32==308",
    "pyzmq==26.2.0",
    "referencing==0.35.1",
    "requests==2.32.3",
    "rpds-py==0.21.0",
    "setuptools==75.1.0",
    "six==1.16.0",
    "soupsieve==2.6",
    "stack-data==0.6.3",
    "tinycss2==1.4.0",
    "tornado==6.4.2",
    "traitlets==5.14.3",
    "twisted==24.10.0",
    "typing-extensions==4.12.2",
    "urllib3==2.2.3",
    "wcwidth==0.2.13",
    "webencodings==0.5.1",
    "werkzeug==3.0.6",
    "wheel==0.44.0",
    "yarg==0.1.9",
    "zope-interface==7.1.1",
]
